--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-web": "^0.20.0",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.5",
-    "expo-splash-screen": "~0.30.9"
+    "expo-splash-screen": "~0.30.9",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
