--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/stack": "^7.3.6",
     "@supabase/supabase-js": "^2.50.0",
     "expo": "~53.0.12",
+    "expo-font": "~13.3.1",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -25,10 +29,7 @@
     "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
-    "expo-font": "~13.3.1",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-splash-screen": "~0.30.9",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "expo-dev-client": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
