--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-file-system": "~18.1.10",
+    "expo-sharing": "~13.1.5",
+    "react-native-view-shot": "4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
