--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@supabase/supabase-js": "^2.50.0",
     "expo": "~53.0.12",
     "expo-dev-client": "~5.2.1",
+    "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "^7.1.5",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
+    "html2canvas": "^1.4.1",
+    "qrcode": "^1.5.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
@@ -30,10 +35,8 @@
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.0",
-    "react-native-web": "^0.20.0",
-    "expo-file-system": "~18.1.10",
-    "expo-sharing": "~13.1.5",
-    "react-native-view-shot": "4.0.3"
+    "react-native-view-shot": "4.0.3",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
