never use direct color name in app.json , always use hex code only

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "splash": {
       "image": "./assets/play_store_512.png",
       "resizeMode": "contain",
-      "backgroundColor": "red"
+      "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true
