--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,7 +15,7 @@
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/stack": "^7.3.6",
     "@supabase/supabase-js": "^2.50.0",
-    "expo": "~53.0.12",
+    "expo": "53.0.13",
     "expo-dev-client": "~5.2.1",
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
@@ -33,10 +33,11 @@
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-size-matters": "^0.4.2",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-view-shot": "4.0.3",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-system-ui": "~5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
